--- a/style.css
+++ b/style.css
@@ -818,7 +818,11 @@ aside .submenu a {
 li > ul.sub-menu {
   margin-left: unset; }
 
+.hamburger-menu.menu_only {
+  display: none; }
+
 @media screen and (max-width: 1024px) {
+  .hamburger-menu.menu_only,
   .sidebar-menu {
     display: block; }
   .header-menu,
